--- a/collapsiblecalendarview2/src/main/res/values-ru/strings.xml
+++ b/collapsiblecalendarview2/src/main/res/values-ru/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CollapsibleCalendarView</string>
-    <string name="friday">Пт</string>
-    <string name="monday">Пн</string>
-    <string name="tuesday">Вт</string>
-    <string name="wednesday">Ср</string>
-    <string name="thursday">Чт</string>
-    <string name="sunday">Вс</string>
-    <string name="saturday">Сб</string>
+    <string name="friday">пт</string>
+    <string name="monday">пн</string>
+    <string name="tuesday">вт</string>
+    <string name="wednesday">ср</string>
+    <string name="thursday">чт</string>
+    <string name="sunday">вс</string>
+    <string name="saturday">сб</string>
 </resources>
